--- a/About.html
+++ b/About.html
@@ -3,15 +3,16 @@
 <head>
 <link rel="stylesheet" href="style.css">
 <link rel ="icon" href="logo.jpeg" type="image/x-icon">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <ul>
-  <li><a href="Home.html">Home</a></li>
+  <li><a href="Index.html">Home</a></li>
   <li><a class="active" href="About.html">About</a></li>
   <li><a href="Contact.html">Contact</a></li>
   <li><a href="Testimonials.html">Testimonials</a></li>
+  <li><a href="Timeline.html">Timeline</a></li>
 </ul>
 <div class="icon-bar">
   <a href="https://www.facebook.com/" target="https://www.facebook.com/" class="facebook"><i class="fa fa-facebook"></i></a>
