--- a/Index.html
+++ b/Index.html
@@ -3,15 +3,17 @@
 <head>
 <link rel="stylesheet" href="style.css">
 <link rel ="icon" href="logo.jpeg" type="image/x-icon">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+  
 <ul>
-  <li><a class="active" href="Home.html">Home</a></li>
+  <li><a class="active" href="Index.html">Home</a></li>
   <li><a href="About.html">About</a></li>
   <li><a href="Contact.html">Contact</a></li>
   <li><a href="Testimonials.html">Testimonials</a></li>
+  <li><a href="Timeline.html">Timeline</a></li>
 </ul>
 <div class="icon-bar">
   <a href="https://www.facebook.com/" target="https://www.facebook.com/" class="facebook"><i class="fa fa-facebook"></i></a>
@@ -23,16 +25,10 @@
  
 <h1>The Space Race and exploring the unknown</h1> 
 <img src="astronaut-1.jpg" alt="astronaut-1.jpg"width="600px" height="366"  >
-<p>For those of us born before the late 1960’s, it was an event we will never forget. Like a handful of other history-shaping events that have taken place
-   over that same timeframe, I’ll never forget where I was when I heard the news of the Apollo 11 moon landing. I was a young kid at summer camp in 
-   Washington state when Neil Armstrong’s crackly message from the moon was broadcast to the world: “That’s one small step for man—one giant leap for 
-   mankind.” An estimated 500 million people around the world vicariously experienced this historic event.</p>
-   <p>This significant incident inspired a generation of STEM (Science, Technology, Engineering & Math)-oriented kids—myself included—to pursue the education
-      required to support NASA’s space program. For me, that path involved pursuing graduate studies in aerospace and mechanical engineering at Stanford 
-      University, and working with NASA on spacesuit design for future Moon and Mars missions. I also spent more than a decade doing astronaut training 
-      and working as a spaceflight test crewmember with Lockheed Martin on NASA’s Hubble Space Telescope and International Space Station programs.
-       I got to do a lot of really fun simulation and training activities, including flying jets, jumping out of planes, diving in neutral buoyancy tanks,
-        working in spacesuits, and flying aboard NASA’s KC135 “Vomit Comet.”</p>
+<p>Human space exploration helps to address fundamental questions about our place in the Universe and the history of our solar system. Through addressing the challenges related to human space exploration we expand technology, create new industries, and help to foster a peaceful connection with other nations.</p>
+   <p>At the time of the moon landing in 1969, many people envisioned that by the beginning of the 21st century, space travel would become routine, and we would be visiting other planets in our solar system and perhaps even daring to venture into interstellar space.</p>
+   <p>Sadly, that future hasn't yet arrived. In fact, some people have started to question whether we need space travel anymore. Wasn't going to the moon good enough? Maybe the U.S. should leave space exploration to private companies -- or even other countries.
+  </p>
         <p>As we reflect on the Apollo program, it’s worth noting some of the events that—had they gone differently—could have led to very different outcomes
            on the world stage. The Space Race (1957-1975) between the US and the Soviet Union was an outgrowth of the Cold War. During this era, each of the
             two countries attempted to assert its prowess (scientifically, technologically, and economically) in various domains including land, sea and air,
@@ -45,6 +41,7 @@
                     established in 1958, and effectively kicking off the Mercury, Gemini and Apollo human spaceflight missions.</p><br>
                     <br>
                     <h3>10 Recent SPACE DISCOVERIES That WILL BLOW YOUR MINDS</h3>
-                    <iframe width="900" height="415" src="https://www.youtube.com/embed/Zi3kr6ADeUs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/Zi3kr6ADeUs" width="900" height="415"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  
 </body>
 </html>
