--- a/Testimonials.html
+++ b/Testimonials.html
@@ -4,13 +4,15 @@
 <link rel="stylesheet" href="styles2.css">
 <link rel ="icon" href="logo.jpeg" type="image/x-icon">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <ul>
-  <li><a href="Home.html">Home</a></li>
+  <li><a href="Index.html">Home</a></li>
   <li><a href="About.html">About</a></li>
   <li><a href="Contact.html">Contact</a></li>
   <li><a class="active" href="Testimonials.html">Testimonials</a></li>
+  <li><a href="Timeline.html">Timeline</a></li>
 </ul>
 <div class="icon-bar">
   <a href="https://www.facebook.com/" target="https://www.facebook.com/" class="facebook"><i class="fa fa-facebook"></i></a>
@@ -20,11 +22,11 @@
   <a href="https://www.youtube.com/" target="https://www.youtube.com/" class="youtube"><i class="fa fa-youtube"></i></a>
 </div>
 <h1>Testimonials</h1>
-<h2>The people in my life <strong><span style="color:aqua;font-weight:bold">collegues,frinds,family</span></strong> that can vouch for me</h2> 
+<h2>The people in my life <strong><span style="color:aqua;font-weight:bold">collegues,friends,family</span></strong> that can vouch for me</h2> 
 <p>For me, awe and wonder are a great starting place for inspiring us all to seek, learn and explore all we can about God and the universe we 
   inhabit. Looking back across five decades to the actual day of that first moon landing, everyone would never have expected
    to be in the middle of this important conversation involving science, technology, space exploration and faith, but our great God is full of
-    serendipitous surprises, and following him is always an adventure!</p>
+    so many surprises, and following him is always an adventure!</p>
 
 <div class="container">
   <div class="flip-card">
